# NetCatPP

./: .gitignore  Cargo.toml  README.md  nc++  start.sh
crates/ncp-capture-helper/: Cargo.toml
crates/ncp-capture-helper/src/: main.rs
crates/ncp-cli/: Cargo.toml
crates/ncp-cli/src/: cli.rs  main.rs
crates/ncp-core/: Cargo.toml
crates/ncp-core/src/: api.rs  dashboard.rs  dashboard_android.rs  discovery.rs  http.rs  lib.rs  scanner.rs  sniffer.rs  transfer.rs  utils.rs
crates/ncp-ffi/: Cargo.toml
crates/ncp-ffi/src/: lib.rs
docs/: ncp.1
scripts/: build_swift_bridge.sh  install_ncp.sh  package_app.sh
swiftui/NCPDashApp/: Package.swift  README.md
swiftui/NCPDashApp/.build/: build.db  debug.yaml  release.yaml  workspace-state.json
swiftui/NCPDashApp/.build/arm64-apple-macosx/debug/: NCPDashApp  plugin-tools-description.json
swiftui/NCPDashApp/.build/arm64-apple-macosx/debug/Modules/: NCPDashApp.swiftmodule  NCPDashApp.swiftsourceinfo  NCPKit.swiftdoc  NCPKit.swiftmodule  NCPKit.swiftsourceinfo
swiftui/NCPDashApp/.build/arm64-apple-macosx/debug/NCPDashApp.build/: App.d  App.swiftdeps  AppModels.d  AppModels.swiftdeps  AppTheme.d  AppTheme.swiftdeps  AppViewModel.d  AppViewModel.swiftdeps  ContentView.d  ContentView.swiftdeps  DashboardView.d  DashboardView.swiftdeps  HTTPView.d  HTTPView.swiftdeps  MessengerView.d  MetricCard.d  (+13 more)
swiftui/NCPDashApp/.build/arm64-apple-macosx/release/: NCPDashApp  description.json
swiftui/NCPDashApp/NCPDashApp/: App.swift  ContentView.swift
swiftui/NCPDashApp/NCPDashApp/Components/: MetricCard.swift  StyledTextField.swift
swiftui/NCPDashApp/NCPDashApp/Models/: AppModels.swift
swiftui/NCPDashApp/NCPDashApp/Theme/: AppTheme.swift
swiftui/NCPDashApp/NCPDashApp/ViewModels/: AppViewModel.swift
swiftui/NCPDashApp/NCPDashApp/Views/: DashboardView.swift  HTTPView.swift  MessengerView.swift  PacketScannerView.swift  ScannerView.swift  SettingsView.swift
swiftui/NCPKit/: Package.swift
swiftui/NCPKit/.build/: build.db  plugin-tools.yaml  workspace-state.json
swiftui/NCPKit/.build/arm64-apple-macosx/debug/: description.json
swiftui/NCPKit/Sources/NCPKit/: NCPClient.swift  NCPModels.swift
swiftui/NCPKit/Sources/NCPKit.xcframework/: Info.plist
swiftui/NCPKit/Sources/ncpffiFFI/include/: module.modulemap  ncpffiFFI.h
swiftui/NCPKit/Tests/NCPKitTests/: NCPKitTests.swift
tools/uniffi-gen/: Cargo.toml
tools/uniffi-gen/src/: main.rs
(+387 files in other folders)
