[workspace]
resolver = "2"
members = [
  "crates/ncp-core",
  "crates/ncp-cli",
  "crates/ncp-ffi",
  "crates/ncp-capture-helper",
  "tools/uniffi-gen",
]

[workspace.package]
edition = "2024"
version = "0.2.0"
license = "MIT"
authors = ["NetCat++ Contributors"]

[workspace.dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
futures = "0.3.32"
indicatif = "0.18.4"
pnet = "0.35.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.33.1"
tokio = { version = "1.52.1", features = ["full"] }
tui-input = "0.15.2"

async-compression = { version = "0.4.20", features = ["tokio", "gzip"] }
dns-lookup = "2.1.1"
dirs = "6.0.0"
flate2 = "1.1.4"
hex = "0.4.3"
ipnet = "2.11.0"
once_cell = "1.21.3"
pcap-file = "2.0.0"
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
tokio-util = "0.7.16"
walkdir = "2.5.0"
uniffi = { version = "0.28.3", features = ["cli"] }
thiserror = "2.0.12"
