[package]
name = "ncp-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "ncpffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ncp-core = { path = "../ncp-core" }
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true
